# tello_ros_gazebo

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml  ros_entrypoint.sh  setup.sh
config/: tello.rviz
launch/: mono.launch  tello.launch
scripts/: protocol.py  ros_tello.py  utils.py
tello_autonomous/: CMakeLists.txt  package.xml
tello_autonomous/scripts/: circle.py  motion.py
tello_description/: CMakeLists.txt  package.xml
tello_description/meshes/: tello.blend  tello.dae  tello.stl
tello_description/urdf/: quadrotor_with_cam.gazebo.xacro  quadrotor_with_cam.urdf.xacro  tello.urdf.xacro  tello_camera.urdf.xacro
tello_driver/: CMakeLists.txt  package.xml
tello_driver/config/: gazebo_mono.yaml  tello_mono.yaml  tello_orb.rviz  tello_simulation.rviz
tello_driver/launch/: indoor_slam_gazebo.launch  mag_imu.launch  mono.launch  orb.launch  tello.launch  vins_tello.launch
tello_driver/scripts/: path.py  ros_tello.py
tello_gazebo_worlds/: CMakeLists.txt  package.xml
tello_gazebo_worlds/launch/: school.launch
tello_gazebo_worlds/models/px4/c920/: c920-gen.sdf
tello_gazebo_worlds/models/px4/matrice_100/: matrice_100-gen.sdf
tello_gazebo_worlds/models/px4/mb1240-xl-ez4/: mb1240-xl-ez4-gen.sdf
tello_gazebo_worlds/models/px4/r200/: r200-gen.sdf
tello_gazebo_worlds/models/px4/sf10a/: sf10a-gen.sdf
tello_gazebo_worlds/worlds/: office_earthquake.world  school.world  school.world.backup
