<?xml version="1.0"?>
<package format="2">
  <name>tello_driver</name>
  <version>0.0.1</version>
  <description>The tello ros driver Package</description>

  <maintainer email="hirokibingo.ks@gmail.com">Hiroki BINGO</maintainer>
  <author email="hirokibingo.ks@gmail.com">Hiroki BINGO</author>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
